# divert

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.dev.txt  requirements.test.txt
.github/workflows/: build.yaml  lint_and_test.yaml
divert/: core.py  flow.py  targeted.py
examples/: basic.py  basic_without_divert.py  motivation.md  targeted.py
flow_control/: core.py  flow.py  targeted.py
test/: test_core.py  test_flow.py  test_targeted.py
